fixed weird horizontal scroll
turned out to be bootstrap normal .rows inside .container-fluid

--- a/css/diglab.css
+++ b/css/diglab.css
@@ -39,15 +39,15 @@ h6 {
 /* ----------------- hero section ----------------*/
 
 #hero {
-    padding-top: 0; /* top = height of navbar in case there is one! */
+    padding: 0; /* top = height of navbar in case there is one! */
     text-align: center;
+    width:100%;
     min-height:100vh;
     background-image: url(../img/header.png), linear-gradient(#ccc 85%, #333 15%);
     background-color: #ccc;
     background-size: 100% auto;
     background-position: center 85%;
     background-repeat: no-repeat;
-    position: relative;
   }
 
 .intro-message {
@@ -218,15 +218,15 @@ footer {
     position:relative;
 
 
-    background-image: url(../img/footer_left_wide.png);
-    background-size: 100% auto;
+    background-image: url(../img/footer.png);
+    background-size: contain;
     background-color: #ccc;
-    background-position: center center;
+    background-position: center bottom;
     background-repeat: no-repeat;
 }
 
 p.copyright {
-    margin: 15px 0 0;
+    margin: 15px 0 0 0;
 }
 
 .cc /* - creative commons icon - */ {
